--- a/Website/WebsiteFrontend/package.json
+++ b/Website/WebsiteFrontend/package.json
@@ -24,6 +24,8 @@
     "@angular/platform-browser": "^7.2.11",
     "@angular/platform-browser-dynamic": "^7.2.11",
     "@angular/router": "^7.2.11",
+    "@angular/cdk": "^7.3.1",
+    "@ncstate/sat-popover": "^3.2.0",
     "core-js": "^2.6.5",
     "rxjs": "^6.4.0",
     "zone.js": "^0.8.29"
