--- a/Website/WebsiteFrontend/angular.json
+++ b/Website/WebsiteFrontend/angular.json
@@ -22,11 +22,25 @@
             ],
             "styles": [
               "src/styles.css",
-              "src/style.less"
+              "src/style.less",
+              "node_modules/normalize.css/normalize.css",
+              "node_modules/font-awesome/scss/font-awesome.scss",
+              "node_modules/bootstrap/less/bootstrap.less",
+              "node_modules/sweetalert2/dist/sweetalert2.css",
+              "node_modules/animate.css/animate.css",
+              "src/assets/iconfonts/iconfont.css",
+              "src/app/shared/_styles.scss"
             ],
             "scripts": [
               "src/assets/js/copy.js",
-              "src/assets/js/scripts.min.js"
+              "src/assets/js/scripts.min.js",
+              "node_modules/jquery/dist/jquery.js",
+              "node_modules/bootstrap/dist/js/bootstrap.js",
+              "node_modules/sweetalert2/dist/sweetalert2.js",
+              "node_modules/echarts/dist/echarts.min.js",
+              "node_modules/echarts/map/js/china.js",
+              "node_modules/echarts/dist/extension/bmap.js",
+              "src/app/shared/theme/echarts/dark.js"
             ]
           },
           "configurations": {
