--- a/Website/WebsiteFrontend/package.json
+++ b/Website/WebsiteFrontend/package.json
@@ -17,16 +17,16 @@
   "dependencies": {
     "@angular/animations": "^7.2.11",
     "@angular/cdk": "^7.3.1",
+    "@angular/cli": "^8.0.3",
     "@angular/common": "^7.2.11",
     "@angular/compiler": "^7.2.11",
     "@angular/core": "^7.2.11",
     "@angular/forms": "^7.2.11",
-    "@angular/http": "^7.2.11",
     "@angular/platform-browser": "^7.2.11",
     "@angular/platform-browser-dynamic": "^7.2.11",
     "@angular/router": "^7.2.11",
-    "animate.css": "^3.5.2",
     "@ncstate/sat-popover": "^3.2.0",
+    "animate.css": "^3.5.2",
     "core-js": "^2.6.5",
     "echarts": "^3.8.5",
     "font-awesome": "^4.7.0",
@@ -38,20 +38,19 @@
     "ngx-pagination": "^3.0.3",
     "pell": "^1.0.4",
     "roboto-fontface": "^0.8.0",
-    "sweetalert2": "^7.6.3",
     "rxjs": "^6.4.0",
     "rxjs-compat": "^6.5.2",
-    "zone.js": "^0.8.29"
+    "sweetalert2": "^7.6.3",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.7",
-    "@angular/cli": "7.3.7",
-    "@angular/compiler-cli": "^7.2.11",
-    "@angular/language-service": "^7.2.11",
+    "@angular-devkit/build-angular": "~0.800.0",
+    "@angular/compiler-cli": "7.2.15",
+    "@angular/language-service": "^7.2.15",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "^6.14.4",
-    "codelyzer": "~5.0.0",
+    "codelyzer": "^5.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -63,6 +62,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.14.0",
-    "typescript": "3.2.4"
+    "typescript": "3.4.5"
   }
 }
