--- a/Website/WebsiteFrontend/package.json
+++ b/Website/WebsiteFrontend/package.json
@@ -22,6 +22,7 @@
     "@angular/compiler": "^8.0.1",
     "@angular/core": "^8.0.1",
     "@angular/forms": "^8.0.1",
+    "@angular/http": "^7.2.15",
     "@angular/platform-browser": "^8.0.1",
     "@angular/platform-browser-dynamic": "^8.0.1",
     "@angular/router": "^8.0.1",
@@ -34,7 +35,6 @@
     "ng2-file-upload": "^1.3.0",
     "ng2-select": "^2.0.0",
     "ngx-echarts": "^2.0.0",
-    "ngx-modal": "0.0.29",
     "ngx-pagination": "^3.0.3",
     "pell": "^1.0.4",
     "roboto-fontface": "^0.8.0",
@@ -45,8 +45,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.0",
-    "@angular/compiler-cli": "7.2.15",
-    "@angular/language-service": "^7.2.15",
+    "@angular/compiler-cli": "8.0.1",
+    "@angular/language-service": "^8.0.1",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "^6.14.4",
