--- a/homeassistantApp/build.gradle
+++ b/homeassistantApp/build.gradle
@@ -55,7 +55,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.retrofit2:converter-protobuf:2.3.0'
     implementation 'com.squareup.retrofit2:converter-jackson:2.3.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
     implementation 'com.android.support:cardview-v7:28.0.0'
 // You need to depend on the lite runtime library, not protobuf-java
 }
