--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     apply from: 'module-base/base.gradle.kts'
+    apply from: 'module-base/libs.gradle.kts'
 
     repositories {
         jcenter()
