--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "edu/uni"]
 	path = edu/uni
 	url = git@pi:uni
+[submodule "projects/BackendServices"]
+	path = projects/BackendServices
+	url = git@pi:BackendServices
