Update gitmodule config

--- a/.gitmodules
+++ b/.gitmodules
@@ -24,4 +24,4 @@
 	url = git@pi:infrastructure-raspberrypi
 [submodule "projects/website"]
 	path = projects/website
-	url = git@pi:website
+	url = ../website
