--- a/edu/CodeChallenge/build.gradle
+++ b/edu/CodeChallenge/build.gradle
@@ -1,6 +1,16 @@
-plugins {
-    id "org.jetbrains.kotlin.jvm" version "1.3.50"
+buildscript {
+    apply from: '../../libs/module-base/base.gradle.kts'
+
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion" as Object
+    }
 }
+
+apply plugin: 'java'
+apply plugin: 'kotlin'
 
 group 'com.rkarp'
 version '1.0-SNAPSHOT'
@@ -12,9 +22,9 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     testImplementation(
             'org.assertj:assertj-core:3.12.2',
-            'org.junit.jupiter:junit-jupiter-api:5.4.2'
+            "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     )
-    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.4.2')
+    testRuntime("org.junit.jupiter:junit-jupiter-engine:$junitVersion")
 }
 compileKotlin {
     kotlinOptions {
