--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,1 @@
-rootProject.name = 'uni'
-
-include 'CodeChallenge'
-
-project(':CodeChallenge').projectDir = "$rootDir/CodeChallenge" as File
+rootProject.name = 'university'
