--- a/edu/university/build.gradle
+++ b/edu/university/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    apply from: 'module-base/base.gradle'
+    apply from: '../../libs/kotlin/dep/latest/base.gradle.kts'
 
     repositories {
         mavenCentral()
@@ -29,7 +29,7 @@ allprojects {
 
     dependencies {
         implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-        testCompile group: 'junit', name: 'junit', version: junit4Version
+        testCompile group: 'junit', name: 'junit', version: '4.12'
     }
 
     compileKotlin {
