--- a/projects/homebackend/build.gradle
+++ b/projects/homebackend/build.gradle
@@ -1,9 +1,9 @@
 //import com.github.spotbugs.SpotBugsTask
 
 buildscript {
-    apply from: 'module-base/base.gradle.kts'
-    apply from: 'module-base/libs.gradle.kts'
-    apply from: 'module-base/logging.gradle.kts'
+    apply from: '../../libs/kotlin/dep/latest/base.gradle.kts'
+    apply from: '../../libs/kotlin/dep/latest/libs.gradle.kts'
+    apply from: '../../libs/kotlin/dep/latest/logging.gradle.kts'
 
     repositories {
         mavenCentral()
