--- a/projects/JavaFXApps/build.gradle
+++ b/projects/JavaFXApps/build.gradle
@@ -12,6 +12,7 @@ buildscript {
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion" as Object
         classpath "org.openjfx:javafx-plugin:0.0.8"
+//        classpath("gradle.plugin.com.github.spotbugs:spotbugs-gradle-plugin:${rootProject.extra.get("spotbugsPluginVersion")}")
     }
 }
 
@@ -31,57 +32,40 @@ allprojects {
 
     repositories {
         // this repo should be available in every subproject that uses kotlin
-        mavenCentral() // or jcentrer
+        mavenCentral() // or jcenter
     }
 
     dependencies {
+        testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
+        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
         /* uncomment for cross-platform jar: */
 //    runtimeOnly "org.openjfx:javafx-graphics:$javafx.version:win"
 //    runtimeOnly "org.openjfx:javafx-graphics:$javafx.version:linux"
 //    runtimeOnly "org.openjfx:javafx-graphics:$javafx.version:mac"
     }
+
+    test {
+        useJUnitPlatform()
+        testLogging {
+            // Make sure output from
+            // standard out or error is shown
+            // in Gradle output.
+            showStandardStreams = true
+
+            // Or we use events method:
+            // events 'standard_out', 'standard_error'
+
+            // Or set property events:
+            // events = ['standard_out', 'standard_error']
+
+            // Instead of string values we can
+            // use enum values:
+            // events org.gradle.api.tasks.testing.logging.TestLogEvent.STANDARD_OUT,
+            //        org.gradle.api.tasks.testing.logging.TestLogEvent.STANDARD_ERROR,
+        }
+    }
 }
 
-//buildscript {
-//    dependencies {
-//        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${rootProject.extra.get("kotlinVersion")}")
-//        classpath("gradle.plugin.com.github.spotbugs:spotbugs-gradle-plugin:${rootProject.extra.get("spotbugsPluginVersion")}")
-//    }
-//}
-
-//allprojects {
-//    dependencies {
-//        compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${rootProject.extra.get("kotlinVersion")}")
-//        testImplementation("org.junit.jupiter:junit-jupiter-api:${rootProject.extra.get("junitVersion")}")
-//    }
-
-//    tasks.withType<KotlinCompile> {
-//        kotlinOptions.jvmTarget = "1.8"
-//        setDestinationDir(File("$projectDir/build", "classes/java/main"))
-//    }
-//}
-
-//subprojects {
-//    apply {
-//        plugin("java-library")
-//        plugin("org.openjfx.javafxplugin")
-//    }
-//
-////    configure<JavaFXOptions> {
-////        version = rootProject.extra.get("javafxVersion") as String
-////        modules("javafx.controls")
-////    }
-//
-//
-////    apply plugin: 'com.github.spotbugs'
-////    spotbugs {
-////        reportsDir = file("$project.buildDir/reports/findbugs")
-////        reportLevel = "high"
-////        ignoreFailures = true
-////    }
-//
-//}
-
-//tasks.withType<Wrapper> {
-//    gradleVersion = rootProject.extra.get("gradleVersion") as String
-//}
+wrapper {
+    gradleVersion = project.ext.gradleVersion
+}
