JavaFXApps: Fix packaging and update font sizes

--- a/projects/JavaFXApps/BotManager/build.gradle
+++ b/projects/JavaFXApps/BotManager/build.gradle
@@ -23,7 +23,7 @@ javafx {
     modules = [ 'javafx.controls' ]
 }
 
-mainClassName = 'net.rickiekarp.botter.Launcher'
+mainClassName = 'net.rickiekarp.botter.Main'
 
 jar {
     println("Building " + project.name)
