--- a/projects/JavaFXApps/SHA1Pass/build.gradle
+++ b/projects/JavaFXApps/SHA1Pass/build.gradle
@@ -22,7 +22,7 @@ javafx {
     modules = [ 'javafx.controls' ]
 }
 
-mainClassName = 'net.rickiekarp.sha1pass.Launcher'
+mainClassName = 'net.rickiekarp.sha1pass.Main'
 
 jar {
     println("Building " + project.name)
