--- a/projects/JavaFXApps/.gitlab-ci.yml
+++ b/projects/JavaFXApps/.gitlab-ci.yml
@@ -1,5 +1,3 @@
-image: openjdk:11.0.3-jdk
-
 variables:
   GIT_SUBMODULE_STRATEGY: "recursive"
   TEST_VARIABLE: "Test"
@@ -12,8 +10,13 @@ stages:
 
 build:
   stage: build
+  image: openjdk:11.0.3-jdk
   script:
     - ./gradlew clean :SHA1Pass:distZip
   artifacts:
     paths:
     - SHA1Pass/build/distributions
+    expire_in: 1 week
+  only:
+    changes:
+      - projects/JavaFXApps/*
