--- a/projects/JavaFXApps/.gitlab-ci.yml
+++ b/projects/JavaFXApps/.gitlab-ci.yml
@@ -1,10 +1,3 @@
-variables:
-  GIT_SUBMODULE_STRATEGY: "recursive"
-  TEST_VARIABLE: "Test"
-
-before_script:
-  - echo This is a $TEST_VARIABLE
-
 stages:
   - build
 
@@ -12,6 +5,7 @@ build:
   stage: build
   image: openjdk:11.0.3-jdk
   script:
+    - cd projects/JavaFXApps
     - ./gradlew clean :SHA1Pass:distZip
   artifacts:
     paths:
