--- a/projects/homebackend/.gitlab-ci.yml
+++ b/projects/homebackend/.gitlab-ci.yml
@@ -1,66 +1,75 @@
-image: openjdk:11.0.3-jdk
-
-variables:
-  GIT_SUBMODULE_STRATEGY: "recursive"
-  TEST_VARIABLE: "Test"
-
-before_script:
-  - echo This is a $TEST_VARIABLE
-
 stages:
   - test
   - build
-  - deploy
   - report
 
 unitTests:
   stage: test
+  image: openjdk:11.0.4-jdk
   script:
+    - cd projects/homebackend/
     - ./gradlew clean test
+  only:
+    changes:
+      - projects/homebackend/*
 
 buildLoginServer:
   stage: build
+  image: openjdk:11.0.4-jdk
   script:
+    - cd projects/homebackend
     - ./gradlew :LoginServer:build
   artifacts:
     paths:
     - module-deployment/service-application/webapps/
     expire_in: 1 week
+  only:
+    changes:
+      - projects/homebackend/*
 
 buildHomeServer:
   stage: build
+  image: openjdk:11.0.4-jdk
   script:
+    - cd projects/homebackend
     - ./gradlew :HomeServer:build
   artifacts:
     paths:
-      - module-deployment/service-application/webapps/
+      - projects/homebackend/module-deployment/service-application/webapps/
     expire_in: 1 week
+  only:
+    changes:
+      - projects/homebackend/*
 
 buildWebsiteFrontend:
   stage: build
   image: trion/ng-cli
   script:
-    - cd Website/WebsiteFrontend
+    - cd projects/WebsiteFrontend
     - npm install
     - ng build --prod
   artifacts:
     paths:
-      - Website/WebsiteFrontend/dist/
+      - projects/WebsiteFrontend/dist/
     expire_in: 1 week
-
-deploy:
-  stage: deploy
-  script: echo This is the deployment
+  only:
+    changes:
+      - projects/homebackend/*
 
 dokka:
   stage: report
+  image: openjdk:11.0.4-jdk
   script:
+    - cd projects/homebackend
     - ./gradlew :Foundation:dokka
     - ./gradlew :LoginServer:dokka
     - ./gradlew :HomeServer:dokka
   artifacts:
     paths:
-      - Foundation/build/dokka/
-      - LoginServer/build/dokka/
-      - HomeServer/build/dokka/
+      - projects/homebackend/Foundation/build/dokka/
+      - projects/homebackend/LoginServer/build/dokka/
+      - projects/homebackend/HomeServer/build/dokka/
     expire_in: 1 week
+  only:
+    changes:
+      - projects/homebackend/*
