--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,8 @@
+stages:
+  - test
+  - build
+  - report
+
 include:
   - local: 'projects/homebackend/.gitlab-ci.yml'
   - local: 'projects/JavaFXApps/.gitlab-ci.yml'
