--- a/projects/JavaFXApps/core/build.gradle
+++ b/projects/JavaFXApps/core/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
   compile "com.squareup.okhttp3:okhttp:$okhttpVersion"
   compile "org.json:json:$jsonVersion"
-  compile "commons-io:commons-io:2.5"
+  compile "commons-io:commons-io:$commonsIO"
   compile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
 }
