--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,5 +4,5 @@ stages:
   - report
 
 include:
-  - local: 'projects/homebackend/.gitlab-ci.yml'
-  - local: 'projects/JavaFXApps/.gitlab-ci.yml'
+  - 'projects/homebackend/.gitlab-ci.yml'
+  - 'projects/JavaFXApps/.gitlab-ci.yml'
