Add .gitlab-ci.yml to WebsiteFrontend project

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,3 +6,4 @@ stages:
 include:
   - 'projects/homebackend/.gitlab-ci.yml'
   - 'projects/JavaFXApps/.gitlab-ci.yml'
+  - 'projects/WebsiteFrontend/.gitlab-ci.yml'
