--- a/edu/university/build.gradle
+++ b/edu/university/build.gradle
@@ -9,38 +9,31 @@ buildscript {
     }
 }
 
-plugins {
-    id 'java'
-}
+apply plugin: 'java'
+apply plugin: 'kotlin'
 
 group 'com.rkarp'
 version '1.0-SNAPSHOT'
 
-def javaVersion = JavaVersion.VERSION_1_10
-
-allprojects {
-    apply plugin: 'kotlin'
-
-    sourceCompatibility = javaVersion
-
-    repositories {
-        mavenCentral()
+repositories {
+    mavenCentral()
+}
+dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    testImplementation("org.junit.jupiter:junit-jupiter-api:$junitVersion")
+    testRuntime("org.junit.jupiter:junit-jupiter-engine:$junitVersion")
+}
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
     }
-
-    dependencies {
-        implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-        testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
     }
-
-    compileKotlin {
-        kotlinOptions.jvmTarget = "1.8"
-    }
-    compileTestKotlin {
-        kotlinOptions.jvmTarget = "1.8"
-    }
-
 }
 
-wrapper {
-    gradleVersion = project.gradleVersion
+test {
+    useJUnitPlatform()
 }
