Update CI config

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ stages:
   - report
 
 include:
+  - 'edu/university/.gitlab-ci.yml'
   - 'projects/homebackend/.gitlab-ci.yml'
   - 'projects/JavaFXApps/.gitlab-ci.yml'
   - 'projects/WebsiteFrontend/.gitlab-ci.yml'
