--- a/edu/university/.gitlab-ci.yml
+++ b/edu/university/.gitlab-ci.yml
@@ -2,7 +2,7 @@ test-university:
   stage: test
   image: openjdk:11.0.4-jdk
   script:
-    - cd ecu/university
+    - cd edu/university
     - ./gradlew clean test
   only:
     changes:
