--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "docs/infrastructure"]
 	path = docs/infrastructure
-	url = ../infrastructure
+	url = git@git.rickiekarp.net:rickie/infrastructure.git
 [submodule "projects/infrastructure-raspberrypi"]
 	path = projects/infrastructure-raspberrypi
-	url = git@pi:infrastructure-raspberrypi
+	url = git@git.rickiekarp.net:rickie/infrastructure-raspberrypi.git
 [submodule "projects/website"]
 	path = projects/website
-	url = ../website
+	url = git@git.rickiekarp.net:rickie/website.git
 [submodule "projects/module-deployment"]
 	path = projects/module-deployment
-	url = git@pi:module-deployment
+	url = git@git.rickiekarp.net:rickie/module-deployment.git
