--- a/projects/JavaFXApps/BotManager/BotLib/build.gradle
+++ b/projects/JavaFXApps/BotManager/BotLib/build.gradle
@@ -18,3 +18,6 @@ dependencies {
 //    runtimeOnly "org.openjfx:javafx-graphics:$javafx.version:mac"
 }
 
+detekt {
+    config = files("../../../../libs/kotlin/plugins/config/detekt/detekt.yml")
+}
