--- a/projects/JavaFXApps/build.gradle
+++ b/projects/JavaFXApps/build.gradle
@@ -12,7 +12,7 @@ buildscript {
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion" as Object
         classpath "org.openjfx:javafx-plugin:$javafxPlugin"
-//        classpath("gradle.plugin.com.github.spotbugs:spotbugs-gradle-plugin:${rootProject.extra.get("spotbugsPluginVersion")}")
+        classpath "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:$detektVersion"
     }
 }
 
@@ -23,6 +23,7 @@ repositories {
 allprojects {
     apply plugin:'java'
     apply plugin:'kotlin'
+    apply plugin: "io.gitlab.arturbosch.detekt"
 
     apply plugin: "org.openjfx.javafxplugin"
     javafx {
@@ -63,6 +64,12 @@ allprojects {
             // events org.gradle.api.tasks.testing.logging.TestLogEvent.STANDARD_OUT,
             //        org.gradle.api.tasks.testing.logging.TestLogEvent.STANDARD_ERROR,
         }
+    }
+
+    detekt {
+        toolVersion = "$detektVersion"
+        input = files("src/main/kotlin")
+        config = files("../../../libs/kotlin/plugins/config/detekt/detekt.yml")
     }
 }
 
