--- a/edu/university/build.gradle
+++ b/edu/university/build.gradle
@@ -3,14 +3,19 @@ buildscript {
 
     repositories {
         mavenCentral()
+        maven {
+            url = "https://plugins.gradle.org/m2/"
+        }
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion" as Object
+        classpath "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:$detektVersion"
     }
 }
 
 apply plugin: 'java'
 apply plugin: 'kotlin'
+apply plugin: "io.gitlab.arturbosch.detekt"
 
 group 'com.rkarp'
 version '1.0-SNAPSHOT'
@@ -37,3 +42,9 @@ compileTestKotlin {
 test {
     useJUnitPlatform()
 }
+
+detekt {
+        toolVersion = "$detektVersion"
+        input = files("src/main/kotlin")
+        config = files("../../libs/kotlin/plugins/config/detekt/detekt.yml")
+    }
