--- a/projects/JavaFXApps/.gitlab-ci.yml
+++ b/projects/JavaFXApps/.gitlab-ci.yml
@@ -64,7 +64,7 @@ build-SHA1Pass:
     changes:
       - projects/JavaFXApps/*
 
-detekt-JavaFXApps:
+detekt-javafxapps:
   stage: report
   image: openjdk:11.0.5-jdk
   script:
