JavaFXApps: Fix build path

--- a/projects/JavaFXApps/.gitlab-ci.yml
+++ b/projects/JavaFXApps/.gitlab-ci.yml
@@ -68,7 +68,7 @@ build-SnakeFX:
   stage: build
   image: openjdk:11.0.5-jdk
   script:
-    - cd projects/SnakeFX
+    - cd projects/JavaFXApps
     - ./gradlew clean :SnakeFX:distZip
   artifacts:
     paths:
