--- a/projects/JavaFXApps/SnakeFX/build.gradle
+++ b/projects/JavaFXApps/SnakeFX/build.gradle
@@ -24,6 +24,7 @@ mainClassName = 'net.rickiekarp.snakefx.Main'
 test.scanForTestClasses = false
 
 dependencies {
+    compile project(":core")
     
     compile "javax.validation:validation-api:1.0.0.GA"
     compile "org.codehaus.jackson:jackson-mapper-asl:1.9.12"
