--- a/projects/JavaFXApps/SnakeFX/build.gradle
+++ b/projects/JavaFXApps/SnakeFX/build.gradle
@@ -19,10 +19,6 @@ mainClassName = 'net.rickiekarp.snakefx.Main'
 
 
 
-// Bugfix for "failed to read class file" bug when using gradle with Java 8 ea.
-// See: http://forums.gradle.org/gradle/topics/1_7_rc_1_fails_to_read_classfile_for_test_when_using_java_8_0_ea_b99
-test.scanForTestClasses = false
-
 dependencies {
     compile project(":core")
     
@@ -30,9 +26,7 @@ dependencies {
     compile "org.codehaus.jackson:jackson-mapper-asl:1.9.12"
 
     // testing
-    testCompile "junit:junit:4.11"
-    testCompile "org.assertj:assertj-core:1.3.0"
-    testCompile "org.mockito:mockito-all:1.9.5"
+    testCompile "org.mockito:mockito-core:$mockitoCore"
 
 }
 
