JavaFXApps: Execute more tests in CI

--- a/projects/JavaFXApps/.gitlab-ci.yml
+++ b/projects/JavaFXApps/.gitlab-ci.yml
@@ -4,6 +4,7 @@ test-javafxapps:
   script:
     - cd projects/JavaFXApps
     - ./gradlew clean :core:test
+    - ./gradlew clean :SnakeFX:test
   only:
     changes:
       - projects/JavaFXApps/*
