--- a/projects/Website/package.json
+++ b/projects/Website/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-material-dashboard",
-  "author": "DeviasIO",
-  "email": "contact@devias.io",
+  "author": "Rickie Karp",
+  "email": "contact@rickiekarp.net",
   "licence": "MIT",
   "version": "0.3.0",
   "private": false,
