--- a/projects/MobileApps/build.gradle
+++ b/projects/MobileApps/build.gradle
@@ -1,15 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    apply from: 'module-base/base.gradle.kts'
-    apply from: 'module-base/libs.gradle.kts'
+    apply from: '../../libs/kotlin/dep/latest/base.gradle.kts'
+    apply from: '../../libs/kotlin/dep/latest/libs.gradle.kts'
 
     repositories {
         jcenter()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
+        classpath 'com.android.tools.build:gradle:3.6.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "com.google.protobuf:protobuf-gradle-plugin:$protobufGradlePlugin"
 
@@ -23,4 +23,8 @@ allprojects {
         jcenter()
         google()
     }
+}
+
+wrapper {
+    gradleVersion = '5.6.4'
 }
