--- a/projects/Website/package.json
+++ b/projects/Website/package.json
@@ -47,6 +47,7 @@
     "uuid": "^3.3.2",
     "validate.js": "^0.13.1"
   },
+  "proxy": "https://api.rickiekarp.net/",
   "devDependencies": {
     "eslint": "6.6.0",
     "eslint-plugin-prettier": "^3.0.1",
