--- a/projects/Website/package.json
+++ b/projects/Website/package.json
@@ -3,7 +3,7 @@
   "author": "Rickie Karp",
   "email": "contact@rickiekarp.net",
   "licence": "MIT",
-  "version": "0.3.0",
+  "version": "0.0.1",
   "private": false,
   "scripts": {
     "start": "react-scripts start",
@@ -33,6 +33,7 @@
     "chart.js": "^2.8.0",
     "clsx": "^1.0.4",
     "history": "^4.9.0",
+    "formik": "^1.5.2",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
@@ -45,7 +46,9 @@
     "recompose": "^0.30.0",
     "underscore": "^1.9.1",
     "uuid": "^3.3.2",
-    "validate.js": "^0.13.1"
+    "validate.js": "^0.13.1",
+    "rxjs": "^6.3.3",
+    "yup": "^0.27.0"
   },
   "proxy": "https://api.rickiekarp.net/",
   "devDependencies": {
@@ -55,6 +58,8 @@
     "prettier": "^1.17.1",
     "prettier-eslint": "^8.8.2",
     "prettier-eslint-cli": "^4.7.1",
-    "typescript": "^3.5.1"
+    "typescript": "^3.5.1",
+    "html-webpack-plugin": "^3.2.0",
+    "path": "^0.12.7"
   }
 }
