--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ stages:
   - report
 
 include:
-  - 'learning/school/university/.gitlab-ci.yml'
+  - 'learning/university/.gitlab-ci.yml'
   - 'projects/gogogo/.gitlab-ci.yml'
   - 'projects/homebackend/.gitlab-ci.yml'
   - 'projects/JavaFXApps/.gitlab-ci.yml'
