--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ stages:
   - report
 
 include:
-  - 'projects/gogogo/.gitlab-ci.yml'
-  - 'projects/homebackend/.gitlab-ci.yml'
-  - 'projects/JavaFXApps/.gitlab-ci.yml'
-  - 'projects/WebsiteFrontendLegacy/.gitlab-ci.yml'
+  - local: 'projects/gogogo/.gitlab-ci.yml'
+  - local: 'projects/homebackend/.gitlab-ci.yml'
+  - local: 'projects/JavaFXApps/.gitlab-ci.yml'
+  - local: 'projects/WebsiteFrontendLegacy/.gitlab-ci.yml'
