JavaFXApps: Add javafx.fxml module

--- a/projects/JavaFXApps/build.gradle
+++ b/projects/JavaFXApps/build.gradle
@@ -24,7 +24,7 @@ allprojects {
     apply plugin: "org.openjfx.javafxplugin"
     javafx {
         version = "$javafxVersion"
-        modules = [ 'javafx.controls' ]
+        modules = [ 'javafx.controls', 'javafx.fxml' ]
     }
 
     repositories {
