--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "docs/infrastructure"]
+[submodule "projects/infrastructure"]
 	path = projects/infrastructure
 	url = git@git.rickiekarp.net:rickie/infrastructure.git
 [submodule "projects/infrastructure-raspberrypi"]
