--- a/projects/gogogo/.gitlab-ci.yml
+++ b/projects/gogogo/.gitlab-ci.yml
@@ -3,7 +3,7 @@ build-gobackend:
   image: golang:alpine
   script:
     - cd projects/gogogo
-    - CGO_ENABLED=0 GOOS=linux GOARCH=arm GOARM=5 go build -o ../module-deployment/service-gobackend/app cmd/rest-svc/main.go
+    - CGO_ENABLED=0 GOOS=linux GOARCH=arm GOARM=5 go build -o ../module-deployment/service-gobackend/app cmd/gamesrv/main.go
   artifacts:
     paths:
       - projects/module-deployment/service-gobackend/
