--- a/projects/gogogo/Makefile
+++ b/projects/gogogo/Makefile
@@ -12,10 +12,16 @@ DEPLOYMENT_PATH=../module-deployment/service-gobackend
 all: clean test build
 
 build: 
-		GOOS=linux GOARCH=amd64 GOARM=5 go build -ldflags="-X main.Version=$(BINARY_VERSION)" -o $(BUILD_PATH)/$(BINARY_NAME) cmd/gamesrv/main.go
+		GOOS=linux GOARCH=amd64 \
+		go build -ldflags="-X main.Version=$(BINARY_VERSION)" \
+		-o $(BUILD_PATH)/$(BINARY_NAME) \
+		cmd/gamesrv/main.go
 
-buildARM: 
-		CGO_ENABLED=0 GOOS=linux GOARCH=arm GOARM=5 go build -ldflags="-X main.Version=$(BINARY_VERSION)" -o $(BUILD_PATH)/$(BINARY_NAME) cmd/gamesrv/main.go
+buildARMv5: 
+		CGO_ENABLED=0 GOOS=linux GOARCH=arm GOARM=5 \
+		go build -ldflags="-X main.Version=$(BINARY_VERSION)" \
+		-o $(BUILD_PATH)/$(BINARY_NAME) \
+		cmd/gamesrv/main.go
 
 test: 
 		$(GOTEST) -v ./...
