--- a/projects/gogogo/.gitlab-ci.yml
+++ b/projects/gogogo/.gitlab-ci.yml
@@ -1,6 +1,8 @@
 build-gobackend:
   stage: build
-  image: golang:alpine
+  image: golang:1.12.10-alpine3.10
+  before_script:
+    - apt-get update && apt-get install -y make
   script:
     - cd projects/gogogo
     - make build
