--- a/projects/gogogo/.gitlab-ci.yml
+++ b/projects/gogogo/.gitlab-ci.yml
@@ -2,7 +2,7 @@ build-gobackend:
   stage: build
   image: golang:1.12.10-alpine3.10
   before_script:
-    - apt-get update && apt-get install -y make
+    - apk update && apk add make
   script:
     - cd projects/gogogo
     - make build
