--- a/projects/gogogo/.gitlab-ci.yml
+++ b/projects/gogogo/.gitlab-ci.yml
@@ -2,7 +2,7 @@ build-gobackend:
   stage: build
   image: golang:1.12.10-alpine3.10
   before_script:
-    - apk update && apk add make
+    - apk update && apk add git make
   script:
     - cd projects/gogogo
     - make build
