--- a/projects/gogogo/Makefile
+++ b/projects/gogogo/Makefile
@@ -23,6 +23,12 @@ buildARMv5:
 		-o $(BUILD_PATH)/$(BINARY_NAME) \
 		cmd/gamesrv/main.go
 
+buildARM64v5: 
+		CGO_ENABLED=0 GOOS=linux GOARCH=arm64 GOARM=5 \
+		go build -ldflags="-X main.Version=$(BINARY_VERSION)" \
+		-o $(BUILD_PATH)/$(BINARY_NAME) \
+		cmd/gamesrv/main.go
+
 test: 
 		$(GOTEST) -v ./...
 
