--- a/projects/Website/package.json
+++ b/projects/Website/package.json
@@ -32,8 +32,8 @@
     "@material-ui/styles": "^4.2.1",
     "chart.js": "^2.8.0",
     "clsx": "^1.0.4",
-    "history": "^4.9.0",
     "formik": "^1.5.2",
+    "history": "^4.9.0",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
@@ -44,10 +44,10 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.0.1",
     "recompose": "^0.30.0",
+    "rxjs": "^6.3.3",
     "underscore": "^1.9.1",
     "uuid": "^3.3.2",
     "validate.js": "^0.13.1",
-    "rxjs": "^6.3.3",
     "yup": "^0.27.0"
   },
   "proxy": "https://api.rickiekarp.net/",
@@ -55,11 +55,11 @@
     "eslint": "6.6.0",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
+    "html-webpack-plugin": "^3.2.0",
+    "path": "^0.12.7",
     "prettier": "^1.17.1",
     "prettier-eslint": "^8.8.2",
     "prettier-eslint-cli": "^4.7.1",
-    "typescript": "^3.5.1",
-    "html-webpack-plugin": "^3.2.0",
-    "path": "^0.12.7"
+    "typescript": "^3.5.1"
   }
 }
