--- a/projects/Website/package.json
+++ b/projects/Website/package.json
@@ -27,39 +27,37 @@
     ]
   },
   "dependencies": {
-    "@material-ui/core": "^4.2.1",
-    "@material-ui/icons": "^4.2.1",
-    "@material-ui/styles": "^4.2.1",
-    "chart.js": "^2.8.0",
-    "clsx": "^1.0.4",
-    "formik": "^1.5.2",
-    "history": "^4.9.0",
-    "moment": "^2.24.0",
-    "node-sass": "^4.12.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-chartjs-2": "^2.7.6",
-    "react-dom": "^16.8.6",
-    "react-perfect-scrollbar": "^1.5.3",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "^3.0.1",
-    "recompose": "^0.30.0",
-    "rxjs": "^6.3.3",
-    "underscore": "^1.9.1",
-    "uuid": "^3.3.2",
-    "validate.js": "^0.13.1",
-    "yup": "^0.27.0"
+    "@material-ui/core": "4.2.1",
+    "@material-ui/icons": "4.2.1",
+    "@material-ui/styles": "4.2.1",
+    "chart.js": "2.8.0",
+    "clsx": "1.0.4",
+    "formik": "1.5.2",
+    "history": "4.9.0",
+    "moment": "2.24.0",
+    "node-sass": "4.12.0",
+    "prop-types": "15.7.2",
+    "react": "16.8.6",
+    "react-chartjs-2": "2.7.6",
+    "react-dom": "16.8.6",
+    "react-perfect-scrollbar": "1.5.3",
+    "react-router-dom": "5.0.1",
+    "react-scripts": "3.0.1",
+    "recompose": "0.30.0",
+    "rxjs": "6.3.3",
+    "underscore": "1.9.1",
+    "uuid": "3.3.2",
+    "validate.js": "0.13.1",
+    "webpack": "4.29.6",
+    "yup": "0.27.0"
   },
   "proxy": "https://api.rickiekarp.net/",
   "devDependencies": {
-    "eslint": "6.6.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
-    "html-webpack-plugin": "^3.2.0",
-    "path": "^0.12.7",
-    "prettier": "^1.17.1",
-    "prettier-eslint": "^8.8.2",
-    "prettier-eslint-cli": "^4.7.1",
-    "typescript": "^3.5.1"
+    "html-webpack-plugin": "3.2.0",
+    "path": "0.12.7",
+    "prettier": "1.17.1",
+    "prettier-eslint": "8.8.2",
+    "prettier-eslint-cli": "4.7.1",
+    "typescript": "3.5.1"
   }
 }
