--- a/projects/WebsiteFrontendLegacy/package.json
+++ b/projects/WebsiteFrontendLegacy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "version": "0.0.0",
+  "version": "2021.03.06",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -15,52 +15,51 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.0.1",
-    "@angular/cdk": "^8.0.1",
-    "@angular/cli": "^8.0.3",
-    "@angular/common": "^8.0.1",
-    "@angular/compiler": "^8.0.1",
-    "@angular/core": "^8.0.1",
-    "@angular/forms": "^8.0.1",
-    "@angular/http": "^7.2.15",
-    "@angular/platform-browser": "^8.0.1",
-    "@angular/platform-browser-dynamic": "^8.0.1",
-    "@angular/router": "^8.0.1",
-    "@ncstate/sat-popover": "^3.2.0",
-    "animate.css": "^3.5.2",
-    "core-js": "^2.6.5",
-    "echarts": "^3.8.5",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.2.1",
-    "ng-simple-slideshow": "^1.2.9",
-    "ng2-file-upload": "^1.3.0",
-    "ng2-select": "^2.0.0",
-    "ngx-echarts": "^2.0.0",
-    "ngx-pagination": "^3.0.3",
-    "pell": "^1.0.4",
-    "roboto-fontface": "^0.8.0",
-    "rxjs": "^6.4.0",
-    "rxjs-compat": "^6.5.2",
-    "sweetalert2": "^7.6.3",
+    "@angular/animations": "8.2.14",
+    "@angular/cdk": "8.2.3",
+    "@angular/cli": "8.3.29",
+    "@angular/common": "8.2.14",
+    "@angular/compiler": "8.2.14",
+    "@angular/core": "8.2.14",
+    "@angular/forms": "8.2.14",
+    "@angular/platform-browser": "8.2.14",
+    "@angular/platform-browser-dynamic": "8.2.14",
+    "@angular/router": "8.2.14",
+    "@ncstate/sat-popover": "4.0.0",
+    "animate.css": "3.5.2",
+    "core-js": "2.6.5",
+    "echarts": "3.8.5",
+    "font-awesome": "4.7.0",
+    "jquery": "3.2.1",
+    "ng-simple-slideshow": "1.3.0-beta.11",
+    "ng2-file-upload": "1.3.0",
+    "ng2-select": "2.0.0",
+    "ngx-echarts": "2.0.0",
+    "ngx-pagination": "3.0.3",
+    "pell": "1.0.4",
+    "roboto-fontface": "0.8.0",
+    "rxjs": "6.4.0",
+    "rxjs-compat": "6.5.2",
+    "sweetalert2": "7.6.3",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.0",
-    "@angular/compiler-cli": "8.0.1",
-    "@angular/language-service": "^8.0.1",
+    "@angular-devkit/build-angular": "0.800.0",
+    "@angular/compiler-cli": "8.2.14",
+    "@angular/language-service": "8.2.14",
     "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^6.14.4",
-    "codelyzer": "^5.0.1",
+    "@types/jasminewd2": "2.0.6",
+    "@types/node": "6.14.4",
+    "codelyzer": "5.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
+    "karma": "2.0.0",
     "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.4.3",
-    "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "karma-cli": "2.0.0",
+    "karma-coverage-istanbul-reporter": "1.4.3",
+    "karma-jasmine": "1.1.2",
+    "karma-jasmine-html-reporter": "0.2.2",
+    "protractor": "7.0.0",
     "ts-node": "~3.2.0",
     "tslint": "~5.14.0",
     "typescript": "3.4.5"
