Add github to contact page

--- a/projects/WebsiteFrontendLegacy/package.json
+++ b/projects/WebsiteFrontendLegacy/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy-dev.json",
+    "start": "ng serve --proxy-config proxy-pi.json",
+    "startDev": "ng serve --proxy-config proxy-pi.json",
     "buildProd": "ng build --prod --output-path=../module-deployment/service-nginx/html/live",
     "buildStandalone": "ng build",
     "serveStandaloneWatch": "ng serve --proxy-config proxy-dev.json --watch=true",
