--- a/projects/WebsiteFrontendLegacy/package.json
+++ b/projects/WebsiteFrontendLegacy/package.json
@@ -31,7 +31,7 @@
     "core-js": "2.6.5",
     "echarts": "3.8.5",
     "font-awesome": "4.7.0",
-    "jquery": "3.2.1",
+    "jquery": "^3.6.0",
     "ng-simple-slideshow": "1.3.0-beta.11",
     "ng2-file-upload": "1.3.0",
     "ng2-select": "2.0.0",
@@ -45,24 +45,23 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.800.0",
-    "@angular/compiler-cli": "8.2.14",
-    "@angular/language-service": "8.2.14",
+    "@angular-devkit/build-angular": "0.803.29",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
     "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "2.0.6",
-    "@types/node": "6.14.4",
-    "codelyzer": "5.0.1",
+    "@types/jasminewd2": "^2.0.6",
+    "@types/node": "^6.14.4",
+    "codelyzer": "^6.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
-    "karma": "2.0.0",
+    "karma": "^6.3.2",
     "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "2.0.0",
-    "karma-coverage-istanbul-reporter": "1.4.3",
-    "karma-jasmine": "1.1.2",
-    "karma-jasmine-html-reporter": "0.2.2",
-    "protractor": "7.0.0",
+    "karma-cli": "^2.0.0",
+    "karma-coverage-istanbul-reporter": "^1.4.3",
+    "karma-jasmine": "^1.1.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "^7.0.0",
     "ts-node": "~3.2.0",
-    "tslint": "~5.14.0",
-    "typescript": "3.4.5"
+    "typescript": "3.5.3"
   }
 }
