--- a/projects/WebsiteFrontendLegacy/package.json
+++ b/projects/WebsiteFrontendLegacy/package.json
@@ -16,38 +16,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.2.14",
-    "@angular/cdk": "8.2.3",
-    "@angular/cli": "8.3.29",
-    "@angular/common": "8.2.14",
-    "@angular/compiler": "8.2.14",
-    "@angular/core": "8.2.14",
-    "@angular/forms": "8.2.14",
-    "@angular/platform-browser": "8.2.14",
-    "@angular/platform-browser-dynamic": "8.2.14",
-    "@angular/router": "8.2.14",
-    "@ncstate/sat-popover": "4.0.0",
-    "animate.css": "3.5.2",
+    "@angular/animations": "10.2.4",
+    "@angular/cdk": "10.2.7",
+    "@angular/cli": "10.2.3",
+    "@angular/common": "10.2.4",
+    "@angular/compiler": "10.2.4",
+    "@angular/core": "10.2.4",
+    "@angular/forms": "10.2.4",
+    "@angular/platform-browser": "10.2.4",
+    "@angular/platform-browser-dynamic": "10.2.4",
+    "@angular/router": "10.2.4",
+    "@ncstate/sat-popover": "6.0.0",
+    "@ngbmodule/material-carousel": "^0.7.1",
+    "animate.css": "4.1.1",
     "core-js": "2.6.5",
     "echarts": "3.8.5",
     "font-awesome": "4.7.0",
     "jquery": "^3.6.0",
-    "ng-simple-slideshow": "1.3.0-beta.11",
     "ng2-file-upload": "1.3.0",
     "ng2-select": "2.0.0",
     "ngx-echarts": "2.0.0",
     "ngx-pagination": "3.0.3",
     "pell": "1.0.4",
     "roboto-fontface": "0.8.0",
-    "rxjs": "6.4.0",
+    "rxjs": "6.6.0",
     "rxjs-compat": "6.5.2",
     "sweetalert2": "7.6.3",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.803.29",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.14",
+    "@angular-devkit/build-angular": "0.1002.3",
+    "@angular/compiler-cli": "^10.2.4",
+    "@angular/language-service": "^10.2.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "^6.14.4",
@@ -62,6 +62,6 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "^7.0.0",
     "ts-node": "~3.2.0",
-    "typescript": "3.5.3"
+    "typescript": "^3.8.3"
   }
 }
